internal/xds/translator/testdata/out/xds-ir/http-route-dynamic-resolver.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/gateway_envoyproxy_io
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/-1/gateway_envoyproxy_io
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.rbac.dfp_loopback_deny:
          '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
          rbac:
            rules:
              action: DENY
              policies:
                deny-loopback-host:
                  permissions:
                  - header:
                      name: :authority
                      safeRegexMatch:
                        regex: ^127\.0\.0\.1(?::\d+)?$
                  - header:
                      name: :authority
                      safeRegexMatch:
                        regex: ^localhost(?::\d+)?$
                  - header:
                      name: host
                      safeRegexMatch:
                        regex: ^127\.0\.0\.1(?::\d+)?$
                  - header:
                      name: host
                      safeRegexMatch:
                        regex: ^localhost(?::\d+)?$
                  principals:
                  - any: true
